pyfll-installer (001-1) unstable; urgency=low

  [ Horst Tritremmel ]
  * trivial/ unuseable packaging, inject, actual development starts when it's
    online
  * worked on tableWidget, partition name, fstype added 
  * uuid to tableWidget added 
  * bug-fix in libparse-debcontrol-perl 
  * bug in pyqt4, no icon and text in buttons and labels. icons removed 
  * tableWidget shows the text now 
  * cd '/home/hjt/fll/pyfll-installer/trunk'
  * timzone file and supported filesystem changed to pyfll-installer.conf
  * mountpoint to tableWidget added 
  * if partition is extended do noting 
  * Requires root message 
  * moved ui = ... to main, don't use it in init (SEGFAULT) 
  * self codes added to translations.py
  * run_partition_tool callback added 
  * bash start script added 
  * build script to bash 
  * rm *.pyc 
  * su to su-to-root changed 
  * add only neede rows to tableWidget 
  * changed to subprocess
  * changed to subprocess in callbacks.py 
  * main part striped (segmentation fault) 
  * add hd devices to comboBox_installplace 
  * typo
  * label widget with html link removed (SEGFAULT) 
  * main.py added
  * Button tzdata 
  * tz test 
  * add hd devices to comboBox_installplace again 
  * Timezone button ready now 
  * Timezone bugfix 
  * callback test from tableWidget checkboxes 
  * enable/disable format_with comboBox 
  * enable/disable table_mountpoint comboBox 
  * partition_count fixed 
  * reload tableWidget after partition tool ends, TEST 
  * only comments
  * only comments

  [ Stefan Lippers-Hollmann ]
  * bump standards version to 3.8.0, no changes necessary.
  * add myself to uploaders.
  * cupsys --> cups.

 -- Stefan Lippers-Hollmann <s.l-h@gmx.de>  Wed, 25 Jun 2008 13:56:47 +0200